Fw2020/scss/fw2020.scss
// J2 FW2020 theme
//
// Distributed under the MIT license, https://github.com/johnfairh/J2/blob/master/LICENSE

a:hover {
  opacity: .6;
}

.font-weight-slightly-bold {
  font-weight: 500;
}

@media (min-width: 400px) {
  @each $value in $displays {
    /* stylelint-disable declaration-no-important */
    .d-smphone-#{$value} { display: $value !important; }
    /* stylelint-enable declaration-no-important */
  }
}

body {
  @include navigation-base-colors();
  -webkit-font-smoothing: antialiased;
}

.j2-article {
  @include article-colors();
}

.j2-breadcrumb {
  @include navigation-colors();
  border-top: $navigation-border;
  border-bottom: $navigation-border;
}

.j2-nav {
  @include navigation-base-colors();
  min-width: 140px;
  overflow-x: scroll;
  border-right: $navigation-border;
}

.j2-footer {
  @include navigation-colors();
  border-top: $navigation-border;
  border-bottom: $navigation-border;
}

.j2-titlebar {
  @include titlebar-colors();
}

.j2-coverage {
  opacity: .6;
}

/* Nav width refinements */

@include media-breakpoint-up(md) {
  .j2-nav {
    max-width: 250px;
    @supports (position: sticky) {
      position: sticky;
      top: 92px;
      max-height: subtract(100vh, 92px); /* XXX breadcrumbs + header */
      overflow-y: auto;
    }
  }

  .j2-titlebar {
    @supports (position: sticky) {
      position: sticky;
      top: 0;
      z-index: 1020;
    }
  }

  .j2-breadcrumb-nav {
    @supports (position: sticky) {
      position: sticky;
      top: 56px;
      z-index: 1010; // Must be less than titlebar for dropdown to work!
    }
  }
}

/* Maybe delete when resizer is in. */
@include media-breakpoint-up(lg) {
  .j2-nav {
    max-width: 300px;
  }
}

/* Adjust for smalltext (XXX rems) */

.breadcrumb {
  padding-top: 8px;
  padding-bottom: 8px;
  margin: 0;
}

/* ??? */

/* Searchbar */

.navbar-nav form:focus-within {
  width: 60%;
}

/* Language-switcher menu, positioning and UI */

.j2-langmenu {
  padding: .75rem 1rem .25rem;
}

.dropdown-toggle:focus {
  outline: none;
}

.dropdown-menu {
  @include navigation-colors();
  top: 0;
  min-width: 0;
}

.dropdown-item:hover {
  opacity: 1;
}

/* For footer: linespacing doesn't decrease when 'small' */
.small p {
  margin-bottom: .8rem;
}

/* Left navigation */
.j2-nav-list {
  padding-left: 0;
  line-height: 1.7;
  list-style-type: none;

  > li {
    padding-top: .5rem;
    padding-bottom: .5rem;
  }

  ul {
    padding-left: .5rem;
    font-size: .95rem;
    list-style-type: none;
  }
}

@mixin j2-nav-thing($color) {
  display: block; // fill to right for hover
  color: $color;

  &:hover {
    color: $color;
  }

  &.active {
    font-weight: bolder;
  }
}

.j2-nav-topic {
  @include j2-nav-thing($navigation-color);
}

.j2-nav-item {
  @include j2-nav-thing($navigation-secondary-color);
}

